--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
 
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: 1.77.2  # Last Rust version to support Windows 7, newer versions require Windows 8+
+          toolchain: nightly-2025-04-09   # Last Rust version to support Windows 7, newer versions require Windows 8+
 
       - name: Install frontend dependencies
         run: yarn install
